		(https://sourceforge.net/tracker/?func=detail&aid=3421129&group_id=555701&atid=2254860);
	+ Fixed session cookie error on hosts 
		(http://sourceforge.net/tracker/?func=detail&atid=2254860&aid=3407962&group_id=555701);
	+ Fixed error when saving settings
		(http://sourceforge.net/tracker/?func=detail&aid=3437029&group_id=555701&atid=2254860);
		

== 0.4

	New features:
	-------------
	+ Massive add / edit / delete by specifying IP range (e.g. 10.10.0.1 - 10.10.0.254);
	+ Database upgrade / install from browser -> simplified installation/update procedure;
	+ New usertype viewer - can only view IP address list;
	+ Subnets can now be edited directly from IP address list;
	+ Option to lock subnet for writing to no-admin users;
	+ Device and Host list;
	+ Option to specify which subnet can have IP requests when editing / adding subnet if module is enabled;
	+ Latest version check on admin page;

	Bugfixes / enhancements:
	------------------------
	+ Fixed overspanning of multiple sections;
	+ Admin menu and add subnet now shown only to admins;
	+ Fixed VLAN table to show nesting and IP request option and statistics;
	+ Fixed subnet table to show nesting and IP request option;
	+ Subnet Adding shows only master subnets in section not in all sections;
	+ Tooltips and button hovers are now in separate javascript file;
	+ Graphs show only subnets with non-0 ip addresses;
	+ Various code enhancements + improved error handling;
	+ Fixed URL links not updating after few clicks;
	+ If loading slave subnet directly the subnet menu drops down and shows active slave subnet; 
	+ Clicking on master shubnet shows all nested subnets and statistics;
	+ Redesigned log table;
	+ Fixed search;
	

== 0.3

	New features:
	-------------
	+ Subnet nesting - you can now have master subnet and normal subnets belonging to it;
	+ Server settings are now moved to database and can be set under admin menu (database settings & debugging remain in config.php);